# Triangle3D

./: CMakeLists.txt  LICENSE  README.md  header.hpp  main.cpp  run.sh
include/: floatcompar.hpp  geotools.hpp  header.hpp  mathtools.hpp  primitives.hpp  tools.hpp  trig.hpp
src/: main.cpp
test/: CMakeLists.txt  test1.cpp  testing.sh  unit_test.cpp
